# tampl

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
behavior_trees/tamp/: simple_decoupled_tamp.xml
behavior_trees/task/: simple_task_planner.xml
bindings/: CMakeLists.txt
bindings/pytampl/: CMakeLists.txt  __init__.py  typedefs.hpp
bindings/pytampl/agent/: CMakeLists.txt  __init__.py  bindings.cpp
bindings/pytampl/bt/: CMakeLists.txt  __init__.py  bindings.cpp
bindings/pytampl/core/: CMakeLists.txt  action.hpp  bindings.cpp
bindings/pytampl/core/action/: __init__.py
bindings/pytampl/core/state/: __init__.py
bindings/pytampl/core/state_space/: __init__.py
bindings/pytampl/environment/: CMakeLists.txt  __init__.py  bindings.cpp  environment_py.cpp  environment_py.hpp  py_environment.py
bindings/pytampl/pddl/: CMakeLists.txt  __init__.py  pddl.cpp  planning_graph.py
bindings/pytampl/planner/: CMakeLists.txt  __init__.py  bindings.cpp  fast_forward_py.cpp
bindings/pytampl/planner/ompl/: __init__.py
bindings/pytampl/simulation/: CMakeLists.txt  bindings.cpp
bindings/src/pytampl/: CMakeLists.txt  typedefs.hpp
bindings/src/pytampl/environment/: CMakeLists.txt  __init__.py
cmake/: dependencies.cmake  tampl-config.cmake.in  utils.cmake
config/: demo_environments.yaml
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/getting_started/: index.rst
examples/: CMakeLists.txt  README.md  decoupled_tamp.cpp  decoupled_tamp.py  pddlgym_task_planning.py  test_planning_graph.py  test_task_planning.cpp
examples/pybullet/: run.py  single_agent_motion_planning.py
examples/task/: 01_simple_pddl_task_planning.cpp  01_simple_pddl_task_planning.py  02_simple_pddl_task_planning_with_bt.cpp  02_simple_pddl_task_planning_with_bt.py  04_pddlgym_task_planning_with_bt.py  CMakeLists.txt  README.md
examples/task/behavior_trees/: task_planning.xml
extensions/: pyproject.toml
extensions/src/pytampl/extensions/pddlgym/: __init__.py  env.py
extensions/src/pytampl/extensions/pddlgym/envs/: hanoi.py
extensions/src/pytampl/extensions/pybullet/: __init__.py  env.py  registry.py
extensions/src/pytampl/extensions/pybullet/configs/: register_environments.py
extensions/src/pytampl/extensions/pybullet/env/: __init__.py  env.py  robot.py
extensions/src/pytampl/extensions/pybullet/env/objects/: __init__.py  franka.py  object.py
extensions/src/pytampl/extensions/pybullet/env/objects/models/franka/: fp3_franka_hand.urdf  fr3_franka_hand.urdf
extensions/src/pytampl/extensions/pybullet/env/scenes/: __init__.py  empty_world.py  scene.py
extensions/src/pytampl/extensions/pygame/env/: pick_n_place.py
include/tampl/: conversions.hpp  logger.hpp  tampl.hpp
include/tampl/agent/: ompl_agent.hpp
include/tampl/bt/: planner_bt_engine.hpp
include/tampl/bt/plugins/actions/: add_to_plan_skeleton.hpp
include/tampl/bt/plugins/decorators/: loop_task_plan.hpp
include/tampl/bt/plugins/planner/: pddl_planner.hpp  task_planner.hpp
include/tampl/core/: action.hpp  agent.hpp  domain.hpp  environment.hpp  environment_old.hpp  planner.hpp  problem.hpp  state.hpp
include/tampl/environment/: cpp_environment.hpp  environment_factory.hpp  environment_manager.hpp  ompl_env.hpp  pddl_env.hpp  py_environment.hpp
include/tampl/interface/: action.hpp  environment.hpp  planner.hpp  state.hpp
include/tampl/pddl/: domain.hpp  problem.hpp
include/tampl/planner/fast_downward/: fast_downward.hpp
include/tampl/planner/fast_forward/: fast_forward.hpp
include/tampl/planner/ompl/: ompl.hpp
pytampl/: __init__.py
src/: CMakeLists.txt  tampl.cpp
src/agent/: CMakeLists.txt  ompl_agent.cpp
src/bt/: CMakeLists.txt  planner_bt_engine.cpp
src/bt/behavior_trees/: config.hpp.in
src/bt/plugins/: plugins_list.hpp.in
src/bt/plugins/actions/: add_to_plan_skeleton.cpp
src/bt/plugins/decorators/: loop_task_plan.cpp
src/bt/plugins/planner/: pddl_planner.cpp  task_planner.cpp
src/core/: CMakeLists.txt  domain.cpp  planner.cpp  problem.cpp
src/environment/: CMakeLists.txt  cpp_environment.cpp  environment_factory.cpp  environment_manager.cpp  ompl_env.cpp  pddl_env.cpp  py_environment.cpp
src/planner/: CMakeLists.txt
src/planner/fast_downward/: CMakeLists.txt  fast_downward.cpp
src/planner/fast_forward/: CMakeLists.txt  fast_forward.cpp
src/planner/ompl/: ompl.cpp
tests/bindings/core/: test_action.py  test_state.py  test_state_space.py
tests/bindings/environment/: test_ompl_env.py
