[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pytampl"
version = "0.1.0"
description="Python Bindings for Task and Motion Planning Library (TAMPL)"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
  "ignore::pytest.PytestCacheWarning",
]
testpaths = ["tests"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["bindings/pytampl"]
build-dir = "build"
wheel.exclude = ["**.cpp", "**.hpp", "**.txt"]
logging.level = "INFO"
build.verbose = true
cmake.args = ["-DOMPL_BUILD_TESTS=OFF"]

[tool.setuptools.packages.find]
where = ["bindings"]