[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["pytampl.extensions.pddlgym", "pytampl.extensions.pybullet"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[project]
name = "pytampl-extensions"
version = "0.1.0"
description = "TAMPL Extensions"
requires-python = ">=3.8"
